istio/virtual_services_weight/players-vs-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: players-vs-weight
spec:
  hosts:
    - players
  http:
    - match:
        - uri:
            prefix: /api/players
      route:
        - destination:
            host: players
            port:
              number: 9999
            subset: v1
          weight: 80
        - destination:
            host: players
            port:
              number: 9999
            subset: v2
          weight: 20
